--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-burger-menu": "^3.0.8",
     "react-content-loader": "^6.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.1.3",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
