--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-burger-menu": "^2.8.3"
+    "@types/react-burger-menu": "^2.8.3",
+    "@types/react-slick": "^0.23.10"
   }
 }
